--- a/src/1-Intro/1-3_model-image-registration/1-3_model-image-registration.tex
+++ b/src/1-Intro/1-3_model-image-registration/1-3_model-image-registration.tex
@@ -46,3 +46,7 @@ While this seems extremely promising, the general cost and unavailability of bi-
 Roentgen Stereophotogrammetry is one of the most accurate methods of measuring implant kinematics, popularized in the early 1970s \cite{selvikRoentgenStereophotogrammetryMethod1989}. Most often, it is used to determine implant micromotion in post-operative followups due to the extremely high resolution at which it measures pose and orientation. This method utilizes highly radio-opaque tantalum beads of known shape and size implanted on and adjacent to the implants. Utilizing similar methods to motion capture, algorithms can resolve the location of the tantalum beads extremely accurately, providing a good estimate for the location of the implant to which they are attached.
 
 The largest limitation of this method is two-fold (1) the need for additional surgical steps precludes this from being a widely applied method, and (2) the need for biplane imaging system poses a problem to availability and portability.
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% End:
