--- a/src/1-Intro/1-2_machine-learning/1-2_ml.tex
+++ b/src/1-Intro/1-2_machine-learning/1-2_ml.tex
@@ -1,8 +1,11 @@
-\cite{krizhevskyImageNetClassificationDeep2017} Alex Krizhevsky sparked renewed interest in deep learning in 2012 by utilizing a convolutional neural network to win the ImageNet challenge \cite{russakovskyImageNetLargeScale2015} by more than 10 points over second place. Since then, neural networks have found their way into many different computer vision tasks, including many in the medical field. Neural networks have paved the way for improved image processing and analysis in orthopaedics utilizing a wide array of medical imaging modalities (CT, X-Ray, MRI) to segment and classify different bones and pathologies that are present in the images. This can improve the speed and accuracy of quantifying information present in images, and in some cases, it can completely remove the need for a human operator to perform common tasks.
-
-Broadly, a neural network is an algorithm 
+Broadly, machine learning is the process of algorithms ``learning'' from experience.
 
 
 \input{src/1-Intro/1-2_machine-learning/nn-telos.tex}
 \input{src/1-Intro/1-2_machine-learning/neural-network-structure.tex}
 \input{src/1-Intro/1-2_machine-learning/training-neural-networks.tex}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% End:
