--- a/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
+++ b/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
@@ -62,6 +62,8 @@ One of the main limitations of fully-connected networks is exponential increase 
 
 \subsubsection{Convolutional Neural Networks}
 
+Alex Krizhevsky sparked renewed interest in deep learning in 2012 by utilizing a convolutional neural network to win the ImageNet challenge \cite{russakovskyImageNetLargeScale2015} by more than 10 points over second place.Since then, neural networks have found their way into many different computer vision tasks, including those in the medical field. The power of convolutional neural networks lay in their ability to autonomously extract latent features from images useful for many processing and analysis tasks. The medical field has used them to segment and classify differnet bones, structures, and pathologies from a wide array of imaging modalities (CT, x-ray, MRI, etc). In most cases, it can completely rempve the need for human supervision in many repeitive image processing tasks.
+
 Convolutional neural networks (CNN) utilize the convolution operation (Eq. \ref{eq:convolution}) in order to both reduce the size and complexity of the network and capture spatial information present in images. In the same way that the matrix $W$ in the fully connected network is a learnable parameter in a FCN, the individual kernels are the learnable parameters in a convolution operation. In practice, with the correct cost function and optimization routine, this allows each of the kernels to learn the latent structure in the image and make connections between those structures. At a high level, these kernels often represent feature extractors for edges, lines, corners, curves, and other geometric primitives. However, as one traverses deeper into the network, the combinations of these features are often incomprehensible to a human (Fig. \ref{fig:conv-layers}). 
 
 \begin{figure}[h!]
@@ -80,6 +82,6 @@ Typically, these networks will downsample the image to capture the most salient 
     \label{fig:unet}
 \end{figure}
 
-CNN architecture can be altered by changing the performance of the underlying kernels, either size, stride, shape, or behavior. Stride controls how many discrete steps the kernel takes as it is moving across the input image. Stride can be used to downsample images. An atrous convolution involves internally padding the convolution with zeros so that each of the entries are separated by a layer of zeros. This also has the effect of more aggressively downsizing an image and capturing a larger region around the center pixel.
+CNN architecture can be altered by changing the behavior and structure of the underlying kernels, namely size, stride, and shape. Stride controls the discrete steps the kernel takes as it is moving across the input image, and can be used to downsample more aggressively. An atrous convolution involves internally padding the convolution entries with zeros. This also has the effect of more aggressively downsizing an image and capturing a larger region around the center pixel.
 
 A convolutional neural network can have an additional fully connected network appended to the output in order to learn a mapping that involves a linear combination of the extracted features from the convolution operations. This is often used when a CNN is applied to a classification task, where the total number of outputs of the final FCN is the number of classes.
